osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[wut [or] None].txt
error: expected simple type in `Optional`
--> main.sml:1:5
     |
   1 | Foo: wut | None = JsonData(path='$.foo')
     |      ^ got unknown non-generic type `wut`